// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/Skills/Transcript/TranscriptRow should correctly render with time 1`] = `
<div
  className="be-transcript-row be-transcript-editing-row"
>
  <div
    className="be-transcript-time"
  >
    123
  </div>
  <div
    className="be-transcript-text"
  >
    <TextareaAutosize
      inputRef={[Function]}
      maxRows={10}
      onChange={[Function]}
      onHeightChange={[Function]}
      useCacheForDOMMeasurements={false}
      value=""
    />
    <div
      className="be-transcript-buttons"
    >
      <Button
        type="button"
      >
        <FormattedMessage
          data-resin-target="skill-transcripteditcancel"
          defaultMessage="Cancel"
          id="be.cancel"
        />
      </Button>
      <PrimaryButton
        type="button"
      >
        <FormattedMessage
          data-resin-target="skill-transcripteditsave"
          defaultMessage="Save"
          id="be.save"
        />
      </PrimaryButton>
    </div>
  </div>
</div>
`;

exports[`components/ContentSidebar/Skills/Transcript/TranscriptRow should correctly render without time 1`] = `
<div
  className="be-transcript-row be-transcript-editing-row"
>
  <div
    className="be-transcript-text"
  >
    <TextareaAutosize
      inputRef={[Function]}
      maxRows={10}
      onChange={[Function]}
      onHeightChange={[Function]}
      useCacheForDOMMeasurements={false}
      value=""
    />
    <div
      className="be-transcript-buttons"
    >
      <Button
        type="button"
      >
        <FormattedMessage
          data-resin-target="skill-transcripteditcancel"
          defaultMessage="Cancel"
          id="be.cancel"
        />
      </Button>
      <PrimaryButton
        type="button"
      >
        <FormattedMessage
          data-resin-target="skill-transcripteditsave"
          defaultMessage="Save"
          id="be.save"
        />
      </PrimaryButton>
    </div>
  </div>
</div>
`;
